# TCMatch

./: LICENSE  README.md  main.cpp
exp-deletion/: main.cpp
exp-deletion/matching/: tc_arg.cpp  tc_arg.h  tc_basic_type.h  tc_g_index.cpp  tc_g_index.h  tc_global_index.cpp  tc_global_index.h  tc_io.cpp  tc_io.h  tc_match_order.cpp  tc_match_order.h  tc_search.cpp
exp-deletion/test/: run.sh  tcm.sh
exp-deletion/utils/: CLI11.hpp
exp-order/: main.cpp
exp-order/matching/: tc_arg.cpp  tc_arg.h  tc_g_index.h  tc_global_index.cpp  tc_io.cpp  tc_io.h  tc_match_order.cpp  tc_match_order.h  tc_offline_index.cpp  tc_offline_index.h  tc_search.cpp  tc_search.h
exp-post-varify/: CMakeLists.txt  main.cpp
exp-post-varify/matching/: tc_arg.cpp  tc_arg.h  tc_g_index.cpp  tc_global_index.cpp  tc_global_index.h  tc_io.cpp  tc_io.h  tc_match_order.cpp  tc_search.cpp  tc_search.h
matching/: tc_arg.cpp  tc_arg.h  tc_basic_type.h  tc_global_index.h  tc_misc.cpp  tc_misc.h  tc_search.h
test/: tcm.sh
utils/: mem.h
